updating join related section

--- a/miscellaneous/pyladies/bear_matches.ipynb
+++ b/miscellaneous/pyladies/bear_matches.ipynb
@@ -11,12 +11,7 @@
    "id": "3c6439450316e32e"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-29T16:05:15.057881Z",
-     "start_time": "2024-10-29T16:05:15.038183Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
@@ -25,7 +20,7 @@
    ],
    "id": "e3dbcb95be99f840",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -36,8 +31,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T16:05:17.653565Z",
-     "start_time": "2024-10-29T16:05:17.298937Z"
+     "end_time": "2024-10-28T21:50:44.973053Z",
+     "start_time": "2024-10-28T21:50:44.611461Z"
     }
    },
    "cell_type": "code",
@@ -119,45 +114,110 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Az eredmény Polars dataframe esetén 0.0313 másodperc alatt készült.\n",
+      "Az eredmény Polars dataframe esetén 0.0201 másodperc alatt készült.\n",
       "shape: (3, 4)\n",
       "┌───────┬─────────────┬─────────────┬─────────────┐\n",
       "│ group ┆ x_mean      ┆ y_mean      ┆ z_mean      │\n",
       "│ ---   ┆ ---         ┆ ---         ┆ ---         │\n",
       "│ str   ┆ f64         ┆ f64         ┆ f64         │\n",
       "╞═══════╪═════════════╪═════════════╪═════════════╡\n",
-      "│ A     ┆ 5052.968069 ┆ 4997.997886 ┆ 4997.554708 │\n",
-      "│ B     ┆ 5050.972327 ┆ 5006.834    ┆ 5004.157988 │\n",
-      "│ C     ┆ 5048.74408  ┆ 5001.330012 ┆ 5007.063185 │\n",
+      "│ A     ┆ 5046.9081   ┆ 5003.625313 ┆ 4998.472766 │\n",
+      "│ B     ┆ 5046.227244 ┆ 5003.773889 ┆ 5002.467616 │\n",
+      "│ C     ┆ 5056.391502 ┆ 5009.890756 ┆ 4991.336708 │\n",
       "└───────┴─────────────┴─────────────┴─────────────┘\n",
-      "Az eredmény Polars dataframe esetén 0.0648 másodperc alatt készült.\n",
+      "Az eredmény Polars dataframe esetén 0.0687 másodperc alatt készült.\n",
       "shape: (3, 4)\n",
       "┌───────┬─────────────┬─────────────┬─────────────┐\n",
       "│ group ┆ x_mean      ┆ y_mean      ┆ z_mean      │\n",
       "│ ---   ┆ ---         ┆ ---         ┆ ---         │\n",
       "│ str   ┆ f64         ┆ f64         ┆ f64         │\n",
       "╞═══════╪═════════════╪═════════════╪═════════════╡\n",
-      "│ A     ┆ 5052.968069 ┆ 4997.997886 ┆ 4997.554708 │\n",
-      "│ B     ┆ 5050.972327 ┆ 5006.834    ┆ 5004.157988 │\n",
-      "│ C     ┆ 5048.74408  ┆ 5001.330012 ┆ 5007.063185 │\n",
+      "│ A     ┆ 5046.9081   ┆ 5003.625313 ┆ 4998.472766 │\n",
+      "│ B     ┆ 5046.227244 ┆ 5003.773889 ┆ 5002.467616 │\n",
+      "│ C     ┆ 5056.391502 ┆ 5009.890756 ┆ 4991.336708 │\n",
       "└───────┴─────────────┴─────────────┴─────────────┘\n"
      ]
     },
     {
-     "ename": "ModuleUpgradeRequiredError",
-     "evalue": "hvplot>=0.9.1 is required for `.plot`",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleUpgradeRequiredError\u001B[0m                Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/mb/jm40t3891xq0jskls9cm2djr0000gn/T/ipykernel_50896/1812476281.py\u001B[0m in \u001B[0;36m?\u001B[0;34m()\u001B[0m\n\u001B[1;32m     64\u001B[0m     \u001B[0;34m\"time\"\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0;34m[\u001B[0m\u001B[0mpolars_time\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mpandas_time\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     65\u001B[0m \u001B[0;34m}\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     66\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     67\u001B[0m df_time_results \\\n\u001B[0;32m---> 68\u001B[0;31m     .plot \\\n\u001B[0m\u001B[1;32m     69\u001B[0m     .bar(x=\"library\", y=\"time\") \\\n\u001B[1;32m     70\u001B[0m     \u001B[0;34m.\u001B[0m\u001B[0mproperties\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtitle\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m\"Mérési eredmények\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mwidth\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m400\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mheight\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m300\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     71\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/spark_at_py12/lib/python3.12/site-packages/polars/_utils/unstable.py\u001B[0m in \u001B[0;36m?\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m     55\u001B[0m         \u001B[0;34m@\u001B[0m\u001B[0mwraps\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mfunction\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     56\u001B[0m         \u001B[0;32mdef\u001B[0m \u001B[0mwrapper\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m*\u001B[0m\u001B[0margs\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mP\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0margs\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mP\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m->\u001B[0m \u001B[0mT\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     57\u001B[0m             \u001B[0missue_unstable_warning\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34mf\"\u001B[0m\u001B[0;34m`\u001B[0m\u001B[0;34m{\u001B[0m\u001B[0mfunction\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m__name__\u001B[0m\u001B[0;34m}\u001B[0m\u001B[0;34m` is considered unstable.\u001B[0m\u001B[0;34m\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 58\u001B[0;31m             \u001B[0;32mreturn\u001B[0m \u001B[0mfunction\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m*\u001B[0m\u001B[0margs\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/spark_at_py12/lib/python3.12/site-packages/polars/dataframe/frame.py\u001B[0m in \u001B[0;36m?\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    633\u001B[0m         if not _HVPLOT_AVAILABLE or parse_version(hvplot.__version__) < parse_version(\n\u001B[1;32m    634\u001B[0m             \u001B[0;34m\"0.9.1\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    635\u001B[0m         \u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    636\u001B[0m             \u001B[0mmsg\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;34m\"hvplot>=0.9.1 is required for `.plot`\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 637\u001B[0;31m             \u001B[0;32mraise\u001B[0m \u001B[0mModuleUpgradeRequiredError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmsg\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    638\u001B[0m         \u001B[0mhvplot\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpost_patch\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    639\u001B[0m         \u001B[0;32mreturn\u001B[0m \u001B[0mhvplot\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mplotting\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcore\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mhvPlotTabularPolars\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mModuleUpgradeRequiredError\u001B[0m: hvplot>=0.9.1 is required for `.plot`"
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "  #altair-viz-71a35613680d45afbbf1f7d666b502dd.vega-embed {\n",
+       "    width: 100%;\n",
+       "    display: flex;\n",
+       "  }\n",
+       "\n",
+       "  #altair-viz-71a35613680d45afbbf1f7d666b502dd.vega-embed details,\n",
+       "  #altair-viz-71a35613680d45afbbf1f7d666b502dd.vega-embed details summary {\n",
+       "    position: relative;\n",
+       "  }\n",
+       "</style>\n",
+       "<div id=\"altair-viz-71a35613680d45afbbf1f7d666b502dd\"></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
+       "  (function(spec, embedOpt){\n",
+       "    let outputDiv = document.currentScript.previousElementSibling;\n",
+       "    if (outputDiv.id !== \"altair-viz-71a35613680d45afbbf1f7d666b502dd\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-71a35613680d45afbbf1f7d666b502dd\");\n",
+       "    }\n",
+       "    const paths = {\n",
+       "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
+       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm/vega-lib?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm/vega-lite@5.20.1?noext\",\n",
+       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm/vega-embed@6?noext\",\n",
+       "    };\n",
+       "\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
+       "    }\n",
+       "\n",
+       "    function showError(err) {\n",
+       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+       "      throw err;\n",
+       "    }\n",
+       "\n",
+       "    function displayChart(vegaEmbed) {\n",
+       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+       "    }\n",
+       "\n",
+       "    if(typeof define === \"function\" && define.amd) {\n",
+       "      requirejs.config({paths});\n",
+       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else {\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"5.20.1\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
+       "        .catch(showError)\n",
+       "        .then(() => displayChart(vegaEmbed));\n",
+       "    }\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-c4b10335590b8a045963bb1837b1065b\"}, \"mark\": {\"type\": \"bar\", \"tooltip\": true}, \"encoding\": {\"x\": {\"field\": \"library\", \"type\": \"nominal\"}, \"y\": {\"field\": \"time\", \"type\": \"quantitative\"}}, \"height\": 300, \"params\": [{\"name\": \"param_4\", \"select\": {\"type\": \"interval\", \"encodings\": [\"x\", \"y\"]}, \"bind\": \"scales\"}], \"title\": \"M\\u00e9r\\u00e9si eredm\\u00e9nyek\", \"width\": 400, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.20.1.json\", \"datasets\": {\"data-c4b10335590b8a045963bb1837b1065b\": [{\"library\": \"Polars\", \"time\": 0.020078182220458984}, {\"library\": \"Pandas\", \"time\": 0.0686638355255127}]}}, {\"mode\": \"vega-lite\"});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "alt.Chart(...)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 7
   },
   {
    "metadata": {},
